<resources>
    <string name="app_name">Twitter</string>

    <!-- Page de login -->
    <string name="label_loginTitle">Log in to Twitter</string>

    <string name="img_logoAlt">Twitter Logo</string>

    <string name="textBox_loginHint">Phone, email, or username</string>
    <string name="textBox_pwHint">Password</string>
    <string name="textView_error">Incorrect password or login</string>
    <string name="textView_errorLoginEmpty">Incorrect password or login</string>

    <string name="username">[ USERNAME ]</string>
    <string name="user_text">[ text ]</string>

    <string name="btn_login">Log in</string>

</resources>