<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="software">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:contentDescription="@string/img_logoAlt"
                android:padding="55dp"
                android:rotation="180"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/labelLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_loginTitle"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textboxIdentifiant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/textBox_loginHint"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#D1A0A0A0"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textboxPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/textBox_pwHint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="#D1A0A0A0"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btnConnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="50dp"
                android:backgroundTint="#912E8AF4"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>